# RAS

./: README.md  params.srv
launch_files/: CMakeLists.txt  package.xml
launch_files/launch/: downstairstest.launch  localization.launch  motor_controller.launch  ms2.launch  ms2_5.launch  ms3_5.launch  object_detection.launch  od2.launch  odom.launch  pf.launch
ras_detection/: CMakeLists.txt  model.json  package.xml
ras_detection/scripts/: classify.py
ras_detection/src/: camera_calibration.cpp  detect.cpp  detect_battery.cpp  place_object.cpp
ras_driver/: CMakeLists.txt  package.xml
ras_driver/src/: collision_avoidance.cpp  driver.cpp
ras_driver/src/Fancier driver,some work need to be done ion this one/: driver.cpp
ras_explorer/: CMakeLists.txt  package.xml
ras_explorer/src/: explorer.cpp
ras_localization/: CMakeLists.txt  package.xml
ras_localization/src/: localization.cpp  mapping.cpp  odometry.cpp
ras_localization/src/old code/: map_publisher.cpp  old_mapping.cpp
ras_master/: CMakeLists.txt  package.xml
ras_master/src/: master.cpp  master.cpp.GziIgA
ras_master/src/Master for testing perpouses, fixed path output/: master (set path, for testing).cpp  master(milestone 2).cpp  master.cpp
ras_motor_controller/: CMakeLists.txt  package.xml
ras_motor_controller/src/: motor_controller.cpp
ras_motor_controller/src/old/: motor_control.cpp  value_setting.cpp
ras_msgs/: CMakeLists.txt  README.md
ras_msgs/config/: ras_evidence.perspective
ras_msgs/launch/: view_evidence.launch
ras_msgs/msg/: classified_object.msg  detected_objects.msg
ras_msgs/scripts/: extract_image_evidence
ras_path_planning/: CMakeLists.txt  package.xml
ras_path_planning/src/: a_star.cpp  closest_point_to_object.cpp  mismatch_collision.cpp
ras_servo_control/: CMakeLists.txt  LICENSE  README.md
ras_servo_control/arduino_servo_control/: arduino_servo_control.ino
ras_servo_control/scripts/: servo_control
ras_talker/: CMakeLists.txt  package.xml
ras_talker/src/: talker.cpp
ras_tf/: CMakeLists.txt  package.xml
ras_tf/src/: tf_base_link_lidar.cpp  tf_map_base_link.cpp
